--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "mongoose": "^8.14.1",
+    "dotenv": "^16.5.0",
+    "mongoose": "^8.14.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
